# MemoryChat-Agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  agent.py  exceptions.py  main.py
config/: __init__.py  settings.py
docs/: .gitkeep
llm/: __init__.py  client.py  exceptions.py  prompts.py
memory/: __init__.py  exceptions.py  manager.py  stats.py  types.py
ui/: __init__.py  chat_page.py  components.py  config_page.py  dashboard_add_tab.py  dashboard_all_tab.py  dashboard_batch_tab.py  dashboard_helpers.py  dashboard_page.py  dashboard_search_tab.py  memory_page.py  settings_page.py  sort_filter.py  stats_page.py  widgets.py
utils/: __init__.py  logger.py
