[project]
name = "memory-chat-agent"
version = "0.1.0"
description = "An AI Assistant with Long-Term Memory powered by mem0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "MemoryChat-Agent Contributors" },
]
keywords = ["ai", "agent", "memory", "mem0", "streamlit", "openai", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.45.0",
    "openai>=1.50.0",
    "mem0ai>=0.1.50",
    "chromadb>=0.5.20",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/your-username/MemoryChat-Agent"
Repository = "https://github.com/your-username/MemoryChat-Agent"
Issues = "https://github.com/your-username/MemoryChat-Agent/issues"
Changelog = "https://github.com/your-username/MemoryChat-Agent/blob/main/CHANGELOG.md"

[project.scripts]
memory-chat = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ui", "memory", "llm", "config", "utils"]

[tool.uv]
# Dev dependencies are declared in [dependency-groups] below (PEP 735).

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app", "ui", "memory", "llm", "config", "utils"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --cov=app --cov=ui --cov=memory --cov=llm --cov=config --cov=utils"

[tool.coverage.run]
source = ["app", "ui", "memory", "llm", "config", "utils"]
omit = ["tests/*"]
